fix bug where menu divs are visible when menu is retracted

--- a/public/scss/index.scss
+++ b/public/scss/index.scss
@@ -50,6 +50,8 @@ html {
     > div {
         background-color: white;
     }
+
+    overflow-x: hidden;
 }
 
 main {
